# gitsoviet

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  action.yml  entrypoint.sh  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: app.yml
.github/workflows/: ci.yml  pr-build.yml  pr-ready.yml  propaganda-review.yml  publish.yml  release-poster.yml  release.yml  reusable-release-poster.yml  revolutionary.yml  self-propaganda.yml
gitsoviet/: cli.py  github_client.py  prompt_builder.py
gitsoviet/data/: __init__.py
gitsoviet/data/formats/: __init__.py  mural.txt  poster.txt
gitsoviet/data/styles/: __init__.py  capitalist.txt  cuban.txt  dprk.txt  royalist.txt  soviet.txt
gitsoviet/providers/: __init__.py  base.py  openai_provider.py  registry.py
gitsoviet/templates/: prompt.j2
src/: config.ts  imageProviders.ts  index.ts  prompt.ts
src/gitsoviet/: __init__.py  __main__.py  cli.py  generator.py  github.py  prompt_builder.py  providers.py  request.py
src/gitsoviet/formats/: mural.txt  poster.txt
src/gitsoviet/providers/: base.py  openai_provider.py
src/gitsoviet/styles/: capitalist.txt  cuban.txt  dprk.txt  royalist.txt  soviet.txt
src/gitsoviet/templates/: base_prompt.j2
src/gitsoviet/templates/formats/: mural.txt  poster.txt
src/gitsoviet/templates/styles/: capitalist.txt  cuban.txt  dprk.txt  royalist.txt  soviet.txt
src/scripts/: generateReleasePoster.ts
