[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitsoviet"
version = "0.1.0"
description = "Generate propaganda posters from GitHub pull requests"
authors = [{name = "GitSoviet"}]
requires-python = ">=3.10"
dependencies = [
    "Jinja2>=3.1",
    "requests>=2.31",
    "typer>=0.9",
]

[project.scripts]
gitsoviet = "gitsoviet.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["gitsoviet"]

[tool.hatch.build.include]
paths = ["README.md", "gitsoviet"]
