[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitsoviet"
version = "0.1.0"
description = "Generate propaganda posters from GitHub pull requests"
authors = [{name = "GitSoviet"}]
requires-python = ">=3.10"
dependencies = [
    "Jinja2>=3.1",
    "requests>=2.31",
    "typer>=0.9",
]

[project.scripts]
gitsoviet = "gitsoviet.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitsoviet*"]

[tool.setuptools.package-data]
gitsoviet = ["data/**/*.txt", "templates/*.j2"]
