[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitsoviet"
version = "0.1.0"
description = "Generate propaganda posters from Git diffs and pull requests."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GitSoviet" }]
dependencies = [
    "typer>=0.9,<1.0",
    "jinja2>=3.1,<4.0",
    "openai>=1.3,<2.0",
]

[project.scripts]
gitsoviet = "gitsoviet.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gitsoviet" = [
    "templates/*.j2",
    "templates/formats/*.txt",
    "templates/styles/*.txt",
]


